Update index.html with larger text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <p id="blink">
-        Let's blink!
+        <p style="font-size:30px">Sayangku, let's blink!</p>
     </p>
     <script type="text/javascript">
         let blink =
