--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 </head>
 
 <body>
-    <p id="blink">
-        <p style="font-size:30px">Sayangku, let's blink!</p>
-    </p>
+    <p id="blink" style="font-size:30px">Sayangku, let's blink!</p>
     <script type="text/javascript">
         let blink =
             document.getElementById('blink');
