Update index.html with winking

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <p id="blink" style="font-size:30px">Sayangku, let's blink!</p>
+    <p id="blink" style="font-size:30px">Sayangku, let's blink and wink!</p>
     <script type="text/javascript">
         let blink =
             document.getElementById('blink');
